--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>a project</title>
+    <title>a project for testing</title>
 </head>
 <body>
     
